metadata/src/objects/FObjectOne__c.object
<CustomObject>
    <description>An object used in Forccea test methods.</description>
    <fields>
        <fullName>TestAutoNumber__c</fullName>
        <displayFormat>Test{000000}</displayFormat>
        <label>TestAutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TestCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestCurrency__c</fullName>
        <label>TestCurrency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TestDate__c</fullName>
        <label>TestDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TestDatetime__c</fullName>
        <label>TestDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TestDecimal__c</fullName>
        <label>TestDecimal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestEmail__c</fullName>
        <label>TestEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TestExternalId__c</fullName>
        <externalId>true</externalId>
        <label>TestTextExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFormulaNumber__c</fullName>
        <formula>TestDecimal__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormulaNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestGeolocation__c</fullName>
        <label>TestGeolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>TestInteger__c</fullName>
        <label>TestInteger</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TestLookup</label>
        <referenceTo>FObjectTwo__c</referenceTo>
        <relationshipLabel>FObjectOnes</relationshipLabel>
        <relationshipName>FObjectOnes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestMultiPicklistA__c</fullName>
        <label>TestMultiPicklistA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>d1</fullName>
                </value>
                <value>
                    <fullName>d2</fullName>
                </value>
                <value>
                    <fullName>d3</fullName>
                </value>
                <value>
                    <fullName>d4</fullName>
                </value>
                <value>
                    <fullName>d5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestPercent__c</fullName>
        <label>TestPercent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TestPhone__c</fullName>
        <label>TestPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TestPicklistA__c</fullName>
        <description>This field doesn&apos;t have a controlling field.</description>
        <label>TestPicklistA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a0</fullName>
                </value>
                <value>
                    <fullName>a1</fullName>
                </value>
                <value>
                    <fullName>a2</fullName>
                </value>
                <value>
                    <fullName>a3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestPicklistB__c</fullName>
        <description>This field has the TestPicklistA as a controlling field.</description>
        <label>TestPicklistB</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TestPicklistA__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>b0</fullName>
                </value>
                <value>
                    <fullName>b1</fullName>
                </value>
                <value>
                    <fullName>b2</fullName>
                </value>
                <value>
                    <fullName>b3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestPicklistC__c</fullName>
        <description>This field has the TestPicklistB as a controlling field.</description>
        <label>TestPicklistC</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TestPicklistB__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>c0</fullName>
                </value>
                <value>
                    <fullName>c1</fullName>
                </value>
                <value>
                    <fullName>c2</fullName>
                </value>
                <value>
                    <fullName>c3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestPicklistD__c</fullName>
        <description>This field has the TestCheckbox as a controlling field.</description>
        <label>TestPicklistD</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TestCheckbox__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>d0</fullName>
                </value>
                <value>
                    <fullName>d1</fullName>
                </value>
                <value>
                    <fullName>d2</fullName>
                </value>
                <value>
                    <fullName>d3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestTextAreaLong__c</fullName>
        <label>TestTextAreaLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TestTextAreaRich__c</fullName>
        <label>TestTextAreaRich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TestTextArea__c</fullName>
        <label>TestTextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TestTextRequired__c</fullName>
        <label>TestTextRequired</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestText__c</fullName>
        <label>TestText</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestTime__c</fullName>
        <label>TestTime</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TestUrl__c</fullName>
        <label>TestUrl</label>
        <type>Url</type>
    </fields>
    <label>FObjectOne</label>
    <listViews>
        <fullName>Number_and_Date_fields</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TestInteger__c</columns>
        <columns>TestDecimal__c</columns>
        <columns>TestCurrency__c</columns>
        <columns>TestPercent__c</columns>
        <columns>TestDate__c</columns>
        <columns>TestDatetime__c</columns>
        <columns>TestTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>Number and Date fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Other_fields</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TestLookup__c</columns>
        <columns>TestCheckbox__c</columns>
        <columns>TestAutoNumber__c</columns>
        <columns>TestFormulaNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>Other fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Picklist_fields</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TestPicklistA__c</columns>
        <columns>TestPicklistB__c</columns>
        <columns>TestPicklistC__c</columns>
        <columns>TestPicklistD__c</columns>
        <columns>TestMultiPicklistA__c</columns>
        <filterScope>Everything</filterScope>
        <label>Picklist fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Text_fields</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>TestText__c</columns>
        <columns>TestTextRequired__c</columns>
        <columns>TestTextArea__c</columns>
        <columns>TestTextAreaLong__c</columns>
        <columns>TestTextAreaRich__c</columns>
        <columns>TestPhone__c</columns>
        <columns>TestEmail__c</columns>
        <columns>TestUrl__c</columns>
        <columns>TestExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>Text fields</label>
    </listViews>
    <nameField>
        <displayFormat>FO1-{00000}</displayFormat>
        <label>FObjectOne Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FObjectOnes</pluralLabel>
    <recordTypes>
        <fullName>RecordTypeA</fullName>
        <active>true</active>
        <description>This record type has all picklist values.</description>
        <label>Record Type A</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeB</fullName>
        <active>true</active>
        <description>This record type has a subset of the available picklist values.</description>
        <label>Record Type B</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeC</fullName>
        <active>true</active>
        <description>This record type has all picklist values.</description>
        <label>Record Type C</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>